# churn-predictor

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
src/churn_predictor/: __init__.py  train.py
src/churn_predictor/api/: __init__.py  main.py
src/churn_predictor/data/: __init__.py  loader.py
src/churn_predictor/features/: __init__.py  engineering.py
src/churn_predictor/models/: __init__.py  trainer.py
tests/: conftest.py  test_pipeline.py
tests/api/: test_main.py
tests/data/: test_loader.py
tests/features/: test_engineering.py
tests/models/: test_trainer.py
