[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "churn-predictor"
version = "0.1.0"
description = "Customer churn prediction ML service"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "pandas-stubs>=2.0",
    "types-requests>=2.31",
]

[tool.hatch.build.targets.wheel]
packages = ["src/churn_predictor"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["churn_predictor"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["xgboost.*", "sklearn.*", "joblib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=churn_predictor --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
